--- a/ImageFusion/templates/home_app/uploadImage.html
+++ b/ImageFusion/templates/home_app/uploadImage.html
@@ -14,7 +14,7 @@
                     <!-- <label for="user_email">Email</label> -->
                     <input type="email" name="user_email" id="user_email" value={{user.email}} placeholder={{user.email}} hidden>
                     <label for="inputGroupFile02" class='fw-bold fs-3 mb-1'>Upload Images</label>
-                    <input type="file" multiple class="form-control border-warning" id="inputGroupFile02" name='images' required>
+                    <input type="file" accept="image/png" multiple class="form-control border-warning" id="fileName"  name='images' required>
                     <input type="submit" value="Upload" class="form-control mt-1 bg-success text-white fw-bold border-0 fs-5">
                 </form>
             </div>
