--- a/ImageFusion/templates/index.html
+++ b/ImageFusion/templates/index.html
@@ -4,125 +4,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-        <!-- Font Awesome -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-        <!-- Bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-
-        <!-- default favicon -->
-        {% comment %} <link rel="icon" href="./../favicon.ico" type="image/x-icon"> {% endcomment %}
-        <link rel="icon" href="{% static 'favicon.ico' %}">
-
-        <!-- reference your installed Font Awesome Free package's files here -->
-        <script src="{% static 'fontawesome-free-5.15.4-web/js/all.min.js' %}"></script>
-
-        <!-- Custom CSS -->
-        <link rel="stylesheet" type='text/css' href="{% static 'css/index.css' %}">
-        <link rel="stylesheet" type='text/css' href="{% static 'css/google_sign_in.css' %}">
-
-        <!-- Title of Home Webpage -->
-        <title>Image Fusion</title>
-
-        <style>
-            body::-webkit-scrollbar, div::-webkit-scrollbar{
-                width: 12px;
-            }
-
-            body::-webkit-scrollbar-track, div::-webkit-scrollbar-track{
-                border: 7px solid white;
-                box-shadow: inset 0 0 2.5px 2px rgba(0, 0, 0, 0.5);
-            }
-
-            body::-webkit-scrollbar-thumb, div::-webkit-scrollbar-thumb{
-                background: linear-gradient(0deg, rgba(92, 184, 92, 1) 15%, rgba(92, 184, 92, 1) 95%);
-                border-radius: 0px;
-            }
-
-            body::-webkit-scrollbar-thumb:hover, div::-webkit-scrollbar-thumb:hover{
-                background: linear-gradient(0deg, rgba(92, 184, 92, 1) 15%, rgba(92, 184, 92, 1) 95%);
-            }
-        </style>
-
+        {% include 'home_app/meta_data.html' %}
     </head>
     <body>
-        <!-- header of home page -->
+        <!-- Navbar of home page -->
             <header>
-                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                    <div class="container-fluid">
-                        <a class="navbar-brand">
-                            <div class='bg-white text-success rounded p-1 fw-bold'>
-                                <img src="{% static '/favicon.ico' %}" alt="Image Fusion Logo" height='50' width='50'/> 
-                                Image Fusion
-                            </div>
-                        </a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse mx-auto" id="navbarSupportedContent">
-                            <div class='mx-auto'>
-                                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                    <li class="nav-item ">
-                                        <a class="nav-link" aria-current="page" href="{% url 'home'%}"><span class="btn btn-success"> <i class="fas fa-home"></i> Home</span></a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" aria-current="page" href="{% url 'upload_images'%}"><span class="btn btn-success"> <i class="fas fa-images"></i> Upload Images</span></a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" aria-current="page" href="{% url 'image_fusion' %}"><span class="btn btn-success" > <i class="fas fa-magic"></i> Image Fusion</span></a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class='d-flex'>
-                                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                    {% if user.is_authenticated %}
-                                        <li class="nav-item">
-                                            <span class="nav-link" aria-current="page">
-                                                <span class='btn btn-light fw-bold'> 
-                                                    <i class="fas fa-user-circle"></i> {{user.username}}
-                                                </span>
-                                            </span>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link " aria-current="page">
-                                                <form method="post" action="{% url 'account_logout' %}" >
-                                                    {% csrf_token %}
-                                                    {% if redirect_field_value %}
-                                                        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-                                                    {% endif %}
-                                                    <button class='btn btn-danger'>
-                                                        <i class="fas fa-sign-out-alt"></i> Logout
-                                                    </button>
-                                                </form>
-                                            </a>
-                                        </li>
-                                    {% else %}
-                                        <li class="nav-item">
-                                            <a href="{% provider_login_url 'google' %}" type="button" class="login-with-google-btn" >
-                                                Sign in with Google
-                                            </a>
-                                        </li>
-                                    {% endif %}
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </nav>
+                {% include 'home_app/navbar.html' %}
             </header>
-        <!-- header of home page -->
+        <!-- Navbar of home page -->
 
         <!-- body of HOME page -->
-            {% if user.is_authenticated %}
-
-            {% else %}
-                <div class='container-fluid bg-warning text-dark fs-4 fw-bold p-1'>
-                    <center>You should <span class='bg-white text-dark rounded px-1'>Sign In</span> to view this page !!!</center>
-                </div>
-            {% endif %}
+            {% include 'home_app/body_home.html' %}
         <!-- body of HOME page -->
 
         <!-- body of OTHER pages -->
@@ -131,16 +23,6 @@
             {% endblock body %}
         <!-- body of OTHER pages -->
 
-
-        <!-- Option 1: Bootstrap Bundle with Popper -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-        
-        <!-- jQuery -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-        <!-- Custom JavaScript-->
-        <script type="text/javascript" src="{% static 'js/index.js' %}"></script>
-        <script type="text/javascript" src="{% static 'js/image_processing.js' %}"></script>
-        
+        {% include 'home_app/scripts.html' %}
     </body>
 </html>
